fix: breadcrumb item overflow

--- a/src/breadcrumb/breadcrumb-item.component.scss
+++ b/src/breadcrumb/breadcrumb-item.component.scss
@@ -5,7 +5,6 @@
   display: flex;
 
   .aui-breadcrumb__content {
-    display: inline-flex;
     max-width: 224px;
     @include text-overflow;
   }
